# keyberon-f4

./: .gitignore  .travis.yml  Cargo.toml  README.md  memory.x
.cargo/: config.toml
cad/: Makefile  case.printing.scad  case.stl  key.scad  plate.printing.scad  plate.scad  plate.stl  usb-c-pill.scad
src/: layout.rs  main.rs
