[package]
name = "keyberon-f4"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
#stm32f4xx-hal = { version = "0.6", features = ["rt", "stm32f401", "synopsys-usb-otg", "usb_fs" ] }
stm32f4xx-hal = { git = "https://github.com/Disasm/stm32f4xx-hal", features = ["rt", "stm32f401", "synopsys-usb-otg", "usb_fs"] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-semihosting = "0.5.2"
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
cortex-m-rtfm = "0.5"
generic-array = "0.13"
embedded-hal = "0.2"
usb-device = "0.2.0"
cortex-m-semihosting = "0.3.5"

[patch.crates-io]
synopsys-usb-otg = { git = "https://github.com/stm32-rs/synopsys-usb-otg" }
