[package]
name = "keyberon-f4"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["rt", "stm32f401", "usb_fs"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-halt = "0.2.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
cortex-m-rtic = "0.5"
usb-device = "0.2.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
